--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
           <artifactId>maven-site-plugin</artifactId>
           <version>3.0</version>
         </plugin>
+        
+        <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+        </plugin>
 
         <plugin>
           <artifactId>maven-surefire-report-plugin</artifactId>
